# system-monitor-lamp

./: LICENSE.md  README.md
lamp/: lamp.ino  my_usb_api.cpp  my_usb_api.h  my_usb_private.h  usb.c
service/: Cargo.toml  PKGBUILD  system-monitor-lamp.service
service/src/: main.rs
service/src/platform/: linux.rs  macos.rs  mod.rs
